examples/test/testpolicy6195.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6195
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key4: value0
      key5: value21
      key40: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value22
          key5: value27
      podSelector:
        matchLabels:
          key37: value22
          key42: value4
